added link hover animation

--- a/about.html
+++ b/about.html
@@ -27,9 +27,9 @@
                         <p style="padding-left: 15px;padding-right: 15px;">Isa is currently seeking work and has immediate availability.</p>
                         <br>
                         <div class="social" style="padding-left: 15px; height: 30px;border-style: none; padding-bottom: 20%;">
-                            <a href="https://github.com/IPbiramontes" target="_blank" style="padding-right: 3%; border-style: none;font-size: 25px;"><i class="icon-social-github" style="color: rgb(255,255,255);font-size: 25px;"></i></a>
-                            <a href="https://www.instagram.com/isa.s_wearables/" target="_blank" style="padding-right: 3%; border-style: none;color: rgb(255,255,255);font-size: 25px;"><i class="icon-social-instagram" style="color: rgb(255,255,255);font-size: 25px;"></i></a>
-                            <a href="https://www.linkedin.com/in/isa-biramontes-they-she-891944149/" target="_blank" style=" border-style: none;color: rgb(255,255,255);font-size: 25px;"><i class="icon-social-linkedin"></i></a>
+                            <a href="https://github.com/IPbiramontes" target="_blank" style="padding-right: 3%; border-style: none; color:#d8ff33; font-size: 25px;"><i class="icon-social-github" style="color: rgb(255,255,255);font-size: 25px;"></i></a>
+                            <a href="https://www.instagram.com/isa.s_wearables/" target="_blank" style="padding-right: 3%; border-style: none;color: #d8ff33;font-size: 25px;"><i class="icon-social-instagram" style="color: rgb(255,255,255);font-size: 25px;"></i></a>
+                            <a href="https://www.linkedin.com/in/isa-biramontes-they-she-891944149/" target="_blank" style="padding-right: 3%; border-style: none;color: #d8ff33;font-size: 25px;"><i class="icon-social-linkedin" style="color: rgb(255,255,255);font-size: 25px;"></i></a>
                         </div>
 
                     </div>
