--- a/developer.html
+++ b/developer.html
@@ -56,10 +56,9 @@
                             <img class="content-image" src="img/dev/2020/p2020.png" style="width:100%">
                             <div class="content-details fadeIn-top">
                                 <div class="captions">Former Portfolio
-                                    <div class="social" style="padding-left: 15px; height: 30px;border-style: none;">
-                                        <a href="https://github.com/IPbiramontes/2020_Portfolio" target="_blank" style="padding-right: 3%; border-style: none;font-size: 25px;"><i class="icon-social-github" style="color: rgb(255,255,255);font-size: 25px;"></i></a>
+                                    <div class="social" style="height: 30px; border-style: none;">
+                                        <a href="https://github.com/IPbiramontes/2020_Portfolio" target="_blank" style=" border-style: none;font-size: 25px;"><i class="icon-social-github" style="color: rgb(255,255,255);font-size: 25px;"></i></a>
                                     </div>
-
                                 </div>
                             </div>
                         </div>
@@ -135,7 +134,7 @@
                 <div class="col-xs-4 col-md-4"></div>
                 <div class="col-xs-4 col-md-4" style="float:none;margin:auto;">
                     <div style="text-align: center; height: 10%; border-style: none;" class="social" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
-                        <a href="https://github.com/IPbiramontes/senior_fashion_show" target="_blank" style="border-style: none; font-size: 25px;"><i class="icon-social-github" style="color: rgb(255,255,255);font-size: 25px;"></i></a>
+                        <a href="https://github.com/IPbiramontes/senior_fashion_show" target="_blank" style=" border-style: none;font-size: 25px;"><i class="icon-social-github" style="color: rgb(255,255,255);font-size: 25px;"></i></a>
                     </div>
                 </div>
                 <div class="col-xs-4 col-md-4"></div>
@@ -163,9 +162,9 @@
                             <div class="content-overlay"></div>
                             <img class="content-image" src="img/dev/2019/google.png" style="width:100%">
                             <div class="content-details fadeIn-top">
-                                <div class="captions"> <a href="https://ipbiramontes.github.io/portfolio_studio/" target="_blank"> Studio portfolio (2018-2019) </a> </div>
-                                <div class="social" style="padding-left: 15px; height: 30px;border-style: none;">
-                                    <a href="https://github.com/IPbiramontes/portfolio_studio" target="_blank" style="padding-right: 3%; border-style: none;font-size: 25px;"><i class="icon-social-github" style="color: rgb(255,255,255);font-size: 25px;"></i></a>
+                                <div class="captions" style="font-size: 15px;"> <a href="https://ipbiramontes.github.io/portfolio_studio/" target="_blank"> Studio portfolio (18' - 19') </a> </div>
+                                <div class="social" style="height: 30px; border-style: none;">
+                                    <a href="https://github.com/IPbiramontes/portfolio_studio" target="_blank" style=" border-style: none;font-size: 25px;"><i class="icon-social-github" style="color: rgb(255,255,255);font-size: 25px;"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -198,9 +197,9 @@
                             <div class="content-overlay"></div>
                             <img class="content-image" src="img/dev/181716/ded.png" style="width:100%">
                             <div class="content-details fadeIn-top">
-                                <div class="captions"><a href="https://github.com/GabrielleD61/hackathon2018" target="_blank"> Dare, Explore, Disrupt Hackathon, Won "Most Creative Interpretation of The Theme"</a></div>
-                                <div class="social" style="padding-left: 15px; height: 30px;border-style: none;">
-                                    <a href="https://gabrielled61.github.io/hackathon2018/" target="_blank" style="padding-right: 3%; border-style: none;font-size: 25px;"><i class="icon-social-github" style="color: rgb(255,255,255);font-size: 25px;"></i></a>
+                                <div class="captions" style="font-size: 15px;"> Dare, Explore, Disrupt Hackathon, Won "Most Creative Interpretation of <a href="https://github.com/GabrielleD61/hackathon2018" target="_blank">  The Theme"</a></div>
+                                <div class="social" style="height: 30px; border-style: none;">
+                                    <a href="https://gabrielled61.github.io/hackathon2018/" target="_blank" style=" border-style: none;font-size: 25px;"><i class="icon-social-github" style="color: rgb(255,255,255);font-size: 25px;"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -213,8 +212,8 @@
                             <img class="content-image" src="img/dev/181716/nibs.png" style="width:100%">
                             <div class="content-details fadeIn-top">
                                 <div class="captions"><a href="https://kingimperfection.github.io/HealthyNibblers/" target="_blank"> Code Nation summer internship final project</a></div>
-                                <div class="social" style="padding-left: 15px; height: 30px;border-style: none;">
-                                    <a href="https://github.com/kingimperfection/HealthyNibblers" target="_blank" style="padding-right: 3%; border-style: none;font-size: 25px;"><i class="icon-social-github" style="color: rgb(255,255,255);font-size: 25px;"></i></a>
+                                <div class="social" style="height: 30px; border-style: none;">
+                                    <a href="https://github.com/kingimperfection/HealthyNibblers" target="_blank" style=" border-style: none;font-size: 25px;"><i class="icon-social-github" style="color: rgb(255,255,255);font-size: 25px;"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -230,8 +229,8 @@
                             <img class="content-image" src="img/dev/181716/2017fashion.png" style="width:100%">
                             <div class="content-details fadeIn-top">
                                 <div class="captions"> Code Nation Spring hackathon</div>
-                                <div class="social" style="padding-left: 15px; height: 30px;border-style: none;">
-                                    <a href="https://github.com/GabrielleD61/springhackathon" target="_blank" style="padding-right: 3%; border-style: none;font-size: 25px;"><i class="icon-social-github" style="color: rgb(255,255,255);font-size: 25px;"></i></a>
+                                <div class="social" style="height: 30px;border-style: none;">
+                                    <a href="https://github.com/GabrielleD61/springhackathon" target="_blank" style="border-style: none;font-size: 25px;"><i class="icon-social-github" style="color: rgb(255,255,255);font-size: 25px;"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -243,9 +242,9 @@
                             <div class="content-overlay"></div>
                             <img class="content-image" src="img/dev/181716/second.png" style="width:100%">
                             <div class="content-details fadeIn-top">
-                                <div class="captions"> <a href="https://ipbiramontes.github.io/portfolio/" target="_blank"> Advanced portfolio (2017-2018) </a></div>
-                                <div class="social" style="padding-left: 15px; height: 30px;border-style: none;">
-                                    <a href="https://github.com/IPbiramontes/portfolio" target="_blank" style="padding-right: 3%; border-style: none;font-size: 25px;"><i class="icon-social-github" style="color: rgb(255,255,255);font-size: 25px;"></i></a>
+                                <div class="captions" style="font-size: 15px;"> <a href="https://ipbiramontes.github.io/portfolio/" target="_blank"> Advanced Portfolio (17' - 18') </a></div>
+                                <div class="social" style="height: 30px;border-style: none;">
+                                    <a href="https://github.com/IPbiramontes/portfolio" target="_blank" style="border-style: none;font-size: 25px;"><i class="icon-social-github" style="color: rgb(255,255,255);font-size: 25px;"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -255,9 +254,9 @@
                             <div class="content-overlay"></div>
                             <img class="content-image" src="img/dev/181716/first.png" style="width:100%">
                             <div class="content-details fadeIn-top">
-                                <div class="captions"><a href=> Foundations portfolio (2016-2017)</a></div>
-                                <div class="social" style="padding-left: 15px; height: 30px;border-style: none;">
-                                    <a href="https://github.com/IPbiramontes/Portfolio_Unit6" target="_blank" style="padding-right: 3%; border-style: none;font-size: 25px;"><i class="icon-social-github" style="color: rgb(255,255,255);font-size: 25px;"></i></a>
+                                <div class="captions">Foundations Portfolio (16' - 17')</div>
+                                <div class="social" style="height: 30px;border-style: none;">
+                                    <a href="https://github.com/IPbiramontes/Portfolio_Unit6" target="_blank" style="border-style: none;font-size: 25px;"><i class="icon-social-github" style="color: rgb(255,255,255);font-size: 25px;"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -279,8 +278,8 @@
                             <img class="content-image" src="img/art/20182017/Macbeth.gif" style="width:100%">
                             <div class="content-details fadeIn-top">
                                 <div class="captions"> Interactive Art Page Inspired by <i>Macbeth</i></div>
-                                <div class="social" style="padding-left: 15px; height: 30px;border-style: none;">
-                                    <a href="https://github.com/IPbiramontes/macbeth-characterization" target="_blank" style="padding-right: 3%; border-style: none;font-size: 25px;"><i class="icon-social-github" style="color: rgb(255,255,255);font-size: 25px;"></i></a>
+                                <div class="social" style="height: 30px;border-style: none;">
+                                    <a href="https://github.com/IPbiramontes/macbeth-characterization" target="_blank" style="border-style: none;font-size: 25px;"><i class="icon-social-github" style="color: rgb(255,255,255);font-size: 25px;"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -293,8 +292,8 @@
                             <img class="content-image" src="img/dev/181716/cfc.gif" style="width:100%">
                             <div class="content-details fadeIn-top">
                                 <div class="captions"> Code For Change Hackathon, Won "Best Teamwork"</div>
-                                <div class="social" style="padding-left: 15px; height: 30px;border-style: none;">
-                                    <a href="https://github.com/IPbiramontes/code-for-change-solar" target="_blank" style="padding-right: 3%; border-style: none;font-size: 25px;"><i class="icon-social-github" style="color: rgb(255,255,255);font-size: 25px;"></i></a>
+                                <div class="social" style="height: 30px; border-style: none;">
+                                    <a href="https://github.com/IPbiramontes/code-for-change-solar" target="_blank" style=" border-style: none;font-size: 25px;"><i class="icon-social-github" style="color: rgb(255,255,255);font-size: 25px;"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -307,6 +306,11 @@
 
         </div>
     </div>
+    <style>
+        i {
+            text-shadow: 3px 2px 4px #000000;
+        }
+    </style>
     <div class="footer"></div>
     <script src="js/jquery.min.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
