text more visible on mobile and desk

--- a/developer.html
+++ b/developer.html
@@ -211,7 +211,7 @@
                             <div class="content-overlay"></div>
                             <img class="content-image" src="img/dev/181716/nibs.png" style="width:100%">
                             <div class="content-details fadeIn-top">
-                                <div class="captions"><a href="https://kingimperfection.github.io/HealthyNibblers/" target="_blank"> Code Nation summer internship final project</a></div>
+                                <div class="captions"><a href="https://kingimperfection.github.io/HealthyNibblers/" target="_blank"> Code Nation Summer Internship Final Project</a></div>
                                 <div class="social" style="height: 30px; border-style: none;">
                                     <a href="https://github.com/kingimperfection/HealthyNibblers" target="_blank" style=" border-style: none;font-size: 25px;"><i class="icon-social-github" style="color: rgb(255,255,255);font-size: 25px;"></i></a>
                                 </div>
@@ -228,7 +228,7 @@
                             <div class="content-overlay"></div>
                             <img class="content-image" src="img/dev/181716/2017fashion.png" style="width:100%">
                             <div class="content-details fadeIn-top">
-                                <div class="captions"> Code Nation Spring hackathon</div>
+                                <div class="captions"> Code Nation Spring Hackathon</div>
                                 <div class="social" style="height: 30px;border-style: none;">
                                     <a href="https://github.com/GabrielleD61/springhackathon" target="_blank" style="border-style: none;font-size: 25px;"><i class="icon-social-github" style="color: rgb(255,255,255);font-size: 25px;"></i></a>
                                 </div>
@@ -242,7 +242,7 @@
                             <div class="content-overlay"></div>
                             <img class="content-image" src="img/dev/181716/second.png" style="width:100%">
                             <div class="content-details fadeIn-top">
-                                <div class="captions" style="font-size: 15px;"> <a href="https://ipbiramontes.github.io/portfolio/" target="_blank"> Advanced Portfolio (17' - 18') </a></div>
+                                <div class="captions"> Advanced Portfolio <a href="https://ipbiramontes.github.io/portfolio/" target="_blank"> (17' - 18') </a></div>
                                 <div class="social" style="height: 30px;border-style: none;">
                                     <a href="https://github.com/IPbiramontes/portfolio" target="_blank" style="border-style: none;font-size: 25px;"><i class="icon-social-github" style="color: rgb(255,255,255);font-size: 25px;"></i></a>
                                 </div>
@@ -308,7 +308,7 @@
     </div>
     <style>
         i {
-            text-shadow: 3px 2px 4px #000000;
+            text-shadow: 3px 2px 14px #000000;
         }
     </style>
     <div class="footer"></div>
