text and nav adjustments

--- a/designer.html
+++ b/designer.html
@@ -261,7 +261,7 @@
                                 <div class="content-overlay "></div>
                                 <img class="content-image " src="img/des/fap2tb.png " style="width:100% ">
                                 <div class="content-details fadeIn-top ">
-                                    <div class="captions "> Fashion Art Project 2, "Colors of the Rainbow " <br> Fitted Bodice with Stylized Neckline Back</div>
+                                    <div class="captions" style="font-size: 1.2vw;"> Fashion Art Project 2, "Colors of the Rainbow" <br> Fitted Bodice with Stylized Neckline Back</div>
                                 </div>
                             </div>
                         </div>
