--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
                             <div class="form-group" style="padding-bottom: 2%;"><input class="form-control" type="email" name="_replyto"></div>
                             <p class="required">Message</p>
                             <textarea class="form-control" name="message" rows="8"></textarea>
-                            <p style="padding-top: 5%;">This form is exclusively for professional inquiries. For personal inquiries, please contact her on social media. </p>
+                            <p style="padding-top: 5%;">This form is exclusively for professional inquiries. For personal inquiries, please contact them on social media. </p>
                             <div style="padding-top: 2%;" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" class="form-group"><button type="submit">Send</button></div>
                         </form>
 
