--- a/artist.html
+++ b/artist.html
@@ -388,9 +388,7 @@
                             <div class="content-overlay"></div>
                             <img class="content-image " src="img/art/20182017/Macbeth.gif " style="width:100% ">
                             <div class="content-details fadeIn-top ">
-                                <div class="captions "> Inspired by
-                                    <a href="https://github.com/IPbiramontes/macbeth-characterization "> <i>Macbeth</i> </a>
-                                </div>
+                                <div class="captions "><a href="https://github.com/IPbiramontes/macbeth-characterization "> Inspired by <i>Macbeth</i> </a></div>
                             </div>
                         </div>
                     </div>
