adjusted macbeth in artist

--- a/artist.html
+++ b/artist.html
@@ -388,7 +388,10 @@
                             <div class="content-overlay"></div>
                             <img class="content-image" src="img/art/20182017/Macbeth.gif" style="width:100%">
                             <div class="content-details fadeIn-top">
-                                <div class="captions"><a href="https://github.com/IPbiramontes/macbeth-characterization"> Inspired by <i>Macbeth</i> </a></div>
+                                <div class="captions"> Interactive Art Page Inspired by <i>Macbeth</i></div>
+                                <div class="social" style="height: 30px;border-style: none;">
+                                    <a href="https://github.com/IPbiramontes/macbeth-characterization" target="_blank" style="border-style: none;font-size: 25px;"><i class="icon-social-github" style="color: rgb(255,255,255);font-size: 25px;"></i></a>
+                                </div>
                             </div>
                         </div>
                     </div>
