--- a/developer.html
+++ b/developer.html
@@ -197,9 +197,9 @@
                             <div class="content-overlay"></div>
                             <img class="content-image" src="img/dev/181716/ded.png" style="width:100%">
                             <div class="content-details fadeIn-top">
-                                <div class="captions" style="font-size: 15px;"> Dare, Explore, Disrupt Hackathon, Won "Most Creative Interpretation of <a href="https://github.com/GabrielleD61/hackathon2018" target="_blank">  The Theme"</a></div>
+                                <div class="captions" style="font-size: 15px;"> Dare, Explore, Disrupt Hackathon, Won "Most Creative Interpretation of <a href="https://gabrielled61.github.io/hackathon2018/" target="_blank">  The Theme"</a></div>
                                 <div class="social" style="height: 30px; border-style: none;">
-                                    <a href="https://gabrielled61.github.io/hackathon2018/" target="_blank" style=" border-style: none;font-size: 25px;"><i class="icon-social-github" style="color: rgb(255,255,255);font-size: 25px;"></i></a>
+                                    <a href="https://github.com/GabrielleD61/hackathon2018" target="_blank" style=" border-style: none;font-size: 25px;"><i class="icon-social-github" style="color: rgb(255,255,255);font-size: 25px;"></i></a>
                                 </div>
                             </div>
                         </div>
