--- a/links.html
+++ b/links.html
@@ -5,6 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Isa Biramontes</title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
+    <!-- Bootstrap Font Icon CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.typekit.net/zlk3afr.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -17,56 +21,58 @@
 
 <body>
     <div style="background: #000000; padding-top: 7%;">
-        <section class="bg-black">
-            <div class="container-fluid" data-aos="zoom-out" data-aos-duration="1000" style="padding-left: 5%; padding-right: 5%;">
-                <div class="row">
-                    <div class="col-sm-1 col-md-1 col-lg-1"></div>
-                    <div style="text-align: center;" class="col-sm-10 col-md-10 col-lg-10" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
-                        <h3 style="font-size: 4vw; color: #d8ff33; padding-bottom: 3%;"> resources & info </h3>
-                        <div style="padding-bottom: 20px;" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
-                            <div class="linkCard">
-                                <a class="headLink" href="https://free-palestine.carrd.co/" target="_blank"> free palestine </a>
-                                <p style="margin: 0 0 0 0;"> info carrd on palestine & the isreali government </p>
-                            </div>
-                        </div>
-                        <div style="padding-bottom: 20px;" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
-                            <div class="linkCard">
-                                <a class="headLink" href="https://www.pb-resources.com/" target="_blank "> black lives matter </a>
-                                <p style="margin: 0 0 0 0;"> pb resources, a blm resource coded by a black woman </p>
-                            </div>
-                        </div>
-                        <div style="padding-bottom: 20px;" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
-                            <div class="linkCard">
-                                <a class="headLink" href="https://aavenb.carrd.co/" target="_blank "> what is aave and can I use it? </a>
-                                <p style="margin: 0 0 0 0;"> info carrd on african american vernacular english </p>
-                            </div>
-                        </div>
-                        <div style="padding-bottom: 20px;" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
-                            <div class="linkCard">
-                                <a style="text-transform: lowercase;" class="headLink" href="https://isabiramontes.me/" target="_blank "> isa biramontes</a>
-                                <p style="margin: 0 0 0 0;"> wait, who?</p>
-                                <div class="social" style="padding-left: 15px; border-style: none;">
-                                    <a class="aboutAndLink " href="https://github.com/IPbiramontes " target="_blank " style="padding-right: 3%; border-style: none; color:#d8ff33; font-size: 25px; "><i class="icon-social-github " style="color: rgb(255,255,255);font-size:
-                                    25px; "></i></a>
-                                    <a class="aboutAndLink " href="https://www.instagram.com/isa.s_wearables/ " target="_blank " style="padding-right: 3%; border-style: none;color: #d8ff33;font-size: 25px; "><i class="icon-social-instagram " style="color:
-                                    rgb(255,255,255);font-size: 25px; "></i></a>
-                                    <a class="aboutAndLink " href="https://www.linkedin.com/in/isa-biramontes-they-she-891944149/ " target="_blank " style="padding-right: 3%; border-style: none;color: #d8ff33;font-size: 25px; "><i class="icon-social-linkedin" style="color: rgb(255,255,255);font-size: 25px; "></i></a>
-                                </div>
-                            </div>
+        <div class="container-fluid" data-aos="zoom-out" data-aos-duration="1000" style="padding-left: 5%; padding-right: 5%;">
+            <div class="row">
+                <div class="col-sm-1 col-md-1 col-lg-1"></div>
+                <div style="text-align: center;" class="col-sm-10 col-md-10 col-lg-10" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
+                    <h3 style="font-size: 4vw; color: #d8ff33; padding-bottom: 3%;"> resources & socials</h3>
+                    <div style="padding-bottom: 20px;" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
+                        <div class="linkCard">
+                            <p style="margin: 0 0 0 0;"> palestinian aid</p>
+                            <a class="headLink" href="https://itch.io/b/902/indie-bundle-for-palestinian-aid" target="_blank"> itch.io's indie game bundle pack </a>
                         </div>
                     </div>
-                    <div class="col-sm-1 col-md-1 col-lg-1 "></div>
+                    <div style="padding-bottom: 20px;" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
+                        <div class="linkCard">
+                            <p style="margin: 0 0 0 0;"> free palestine </p>
+                            <a class="headLink" href="https://free-palestine.carrd.co/" target="_blank"> info carrd on palestine & the isreali government </a>
+                        </div>
+                    </div>
+                    <div style="padding-bottom: 20px;" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
+                        <div class="linkCard">
+                            <p style="margin: 0 0 0 0;"> black lives matter </p>
+                            <a class="headLink" href="https://www.pb-resources.com/" target="_blank "> pb resources, a blm resource coded by a black woman</a>
+                        </div>
+                    </div>
+                    <div style="padding-bottom: 20px;" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
+                        <div class="linkCard">
+                            <p style="margin: 0 0 0 0;"> what is aave and can I use it? </p>
+                            <a class="headLink" href="https://aavenb.carrd.co/" target="_blank "> info carrd on african american vernacular english </a>
+                        </div>
+                    </div>
+                    <div style="padding-top: 20px;" class="container space-between">
+                        <div><a href="https://isabiramontes.me/" target="_blank" style="border-style: none; color:#d8ff33; font-size: 25px;"><i class="bi bi-person-circle" style="color: rgb(255,255,255);font-size: 25px;"></i></a></div>
+                        <div><a href="https://github.com/IPbiramontes" target="_blank" style="border-style: none; color:#d8ff33; font-size: 25px;"><i class="icon-social-github" style="color: rgb(255,255,255);font-size: 25px;"></i></a></div>
+                        <div><a href="https://www.instagram.com/isa.s_wearables/" target="_blank" style="border-style: none;color: #d8ff33;font-size: 25px;"><i class="icon-social-instagram" style="color: rgb(255,255,255);font-size: 25px;"></i></a></div>
+                        <div><a href="https://www.linkedin.com/in/isa-biramontes-they-she-891944149/" target="_blank" style="border-style: none;color: #d8ff33;font-size: 25px;"><i class="icon-social-linkedin" style="color: rgb(255,255,255);font-size: 25px;"></i></a></div>
+                    </div>
                 </div>
+                <div class="col-sm-1 col-md-1 col-lg-1"></div>
             </div>
-        </section>
+        </div>
     </div>
+
     <script src="js/jquery.min.js "></script>
+    <!-- JS files: jQuery first, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="bootstrap/js/bootstrap.min.js "></script>
     <script src="js/bs-init.js "></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js "></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js "></script>
     <script src="js/stylish-portfolio.js "></script>
     <script src="js/custom.js "></script>
+
 </body>
 
 </html>
