--- a/links.html
+++ b/links.html
@@ -14,13 +14,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="fonts/simple-line-icons.min.css">
-    <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/custom.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
 </head>
 
 <body>
-    <div style="background: #000000; padding-top: 7%;">
+    <div style="background: #000000; padding-top: 3%;">
         <div class="container-fluid" data-aos="zoom-out" data-aos-duration="1000" style="padding-left: 5%; padding-right: 5%;">
             <div class="row">
                 <div class="col-sm-1 col-md-1 col-lg-1"></div>
@@ -50,22 +49,23 @@
                             <a class="headLink" href="https://aavenb.carrd.co/" target="_blank "> info carrd on african american vernacular english </a>
                         </div>
                     </div>
-                    <div style="padding-top: 20px;" class="container space-between">
-                        <div><a href="https://isabiramontes.me/" target="_blank" style="border-style: none; color:#d8ff33; font-size: 25px;"><i class="bi bi-person-circle" style="color: rgb(255,255,255);font-size: 25px;"></i></a></div>
-                        <div><a href="https://github.com/IPbiramontes" target="_blank" style="border-style: none; color:#d8ff33; font-size: 25px;"><i class="icon-social-github" style="color: rgb(255,255,255);font-size: 25px;"></i></a></div>
-                        <div><a href="https://www.instagram.com/isa.s_wearables/" target="_blank" style="border-style: none;color: #d8ff33;font-size: 25px;"><i class="icon-social-instagram" style="color: rgb(255,255,255);font-size: 25px;"></i></a></div>
-                        <div><a href="https://www.linkedin.com/in/isa-biramontes-they-she-891944149/" target="_blank" style="border-style: none;color: #d8ff33;font-size: 25px;"><i class="icon-social-linkedin" style="color: rgb(255,255,255);font-size: 25px;"></i></a></div>
+                    <div style="padding-top: 3%; padding-bottom: 3%; display: flex; justify-content: space-between; ">
+                        <a href="https://isabiramontes.me/ " target="_blank " style="border-style: none; color:#d8ff33; font-size: 25px; "><i class="bi bi-person-circle " style="color: rgb(255,255,255);font-size: 25px; "></i></a>
+                        <a href="https://github.com/IPbiramontes " target="_blank " style="border-style: none; color:#d8ff33; font-size: 25px; "><i class="icon-social-github " style="color: rgb(255,255,255);font-size: 25px; "></i></a>
+                        <a href="https://www.instagram.com/isa.s_wearables/ " target="_blank " style="border-style: none;color: #d8ff33;font-size: 25px; "><i class="icon-social-instagram " style="color: rgb(255,255,255);font-size: 25px; "></i></a>
+                        <a href="https://www.linkedin.com/in/isa-biramontes-they-she-891944149/ " target="_blank " style="border-style: none;color: #d8ff33;font-size: 25px; "><i class="icon-social-linkedin " style="color: rgb(255,255,255);font-size:
+                        25px; "></i></a>
                     </div>
                 </div>
-                <div class="col-sm-1 col-md-1 col-lg-1"></div>
+                <div class="col-sm-1 col-md-1 col-lg-1 "></div>
             </div>
         </div>
     </div>
 
     <script src="js/jquery.min.js "></script>
     <!-- JS files: jQuery first, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js "></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js "></script>
     <script src="bootstrap/js/bootstrap.min.js "></script>
     <script src="js/bs-init.js "></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js "></script>
