updated link & added narcan link

--- a/links.html
+++ b/links.html
@@ -27,8 +27,8 @@
                     <h3 style="font-size: 4vw; color: #d8ff33; padding-bottom: 3%;"> resources & socials</h3>
                     <div style="padding-bottom: 20px;" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
                         <div class="linkCard">
-                            <p style="margin: 0 0 0 0;"> palestinian aid</p>
-                            <a class="headLink" href="https://itch.io/b/902/indie-bundle-for-palestinian-aid" target="_blank"> itch.io's indie game bundle pack </a>
+                            <p style="margin: 0 0 0 0;"> start carrying naloxone </p>
+                            <a class="headLink" href="https://nextdistro.org/naloxone#state-finder" target="_blank "> learn how to respond to an opioid overdose  </a>
                         </div>
                     </div>
                     <div style="padding-bottom: 20px;" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
@@ -53,7 +53,7 @@
                         <a href="https://isabiramontes.me/ " target="_blank " style="border-style: none; color:#d8ff33; font-size: 25px; "><i class="bi bi-person-circle " style="color: rgb(255,255,255);font-size: 25px; "></i></a>
                         <a href="https://github.com/IPbiramontes " target="_blank " style="border-style: none; color:#d8ff33; font-size: 25px; "><i class="icon-social-github " style="color: rgb(255,255,255);font-size: 25px; "></i></a>
                         <a href="https://www.instagram.com/isa.s_wearables/ " target="_blank " style="border-style: none;color: #d8ff33;font-size: 25px; "><i class="icon-social-instagram " style="color: rgb(255,255,255);font-size: 25px; "></i></a>
-                        <a href="https://www.linkedin.com/in/isa-biramontes-they-she-891944149/ " target="_blank " style="border-style: none;color: #d8ff33;font-size: 25px; "><i class="icon-social-linkedin " style="color: rgb(255,255,255);font-size:
+                        <a href="https://www.linkedin.com/in/isa-biramontes/" target="_blank " style="border-style: none;color: #d8ff33;font-size: 25px; "><i class="icon-social-linkedin " style="color: rgb(255,255,255);font-size:
                         25px; "></i></a>
                     </div>
                 </div>
