--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
             <div class="container-fluid" data-aos="zoom-out" data-aos-duration="1000" style="padding-left: 5%; padding-right: 5%;">
                 <div class="row">
                     <div class="col-md-12 col-lg-6">
-                        <p style="padding-left: 15px;padding-right: 15px;">Isa Biramontes (they/she) is an aspiring wearable technology developer based in New York, NY. They have a general background in fashion, textiles, coding, and interdisciplinary design.</p>
+                        <p style="padding-left: 15px;padding-right: 15px;">Isa Biramontes (they/them) is an aspiring wearable technology developer based in New York, NY. They have a general background in fashion, textiles, coding, and interdisciplinary design.</p>
                         <br>
                         <div class="social" style="padding-left: 15px; height: 30px;border-style: none; padding-bottom: 20%;">
                             <a class="aboutAndLink" href="https://github.com/IPbiramontes" target="_blank" style="padding-right: 3%; border-style: none; color:#d8ff33; font-size: 25px;"><i class="icon-social-github" style="color: rgb(255,255,255);font-size: 25px;"></i></a>
