moonlight diner concept

--- a/developer.html
+++ b/developer.html
@@ -31,6 +31,17 @@
                     <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
                         <div class="content">
                             <div class="content-overlay"></div>
+                            <img class="content-image" src="img/md_sam.png" style="width:100%">
+                            <div class="content-details fadeIn-top">
+                                <div class="captions">Moonlight Diner</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-4 col-md-4" style="padding-right: 2%;">
+                    <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
+                        <div class="content">
+                            <div class="content-overlay"></div>
                             <img class="content-image" src="img/dev/2020/current.png" style="width:100%">
                             <div class="content-details fadeIn-top">
                                 <div class="captions"> <a href="index.html"> Isabiramontes.me </a> </div>
@@ -49,23 +60,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-4 col-md-4" style="padding-right: 2%;">
-                    <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
-                        <div class="content">
-                            <div class="content-overlay"></div>
-                            <img class="content-image" src="img/dev/2020/p2020.png" style="width:100%">
-                            <div class="content-details fadeIn-top">
-                                <div class="captions">Former Portfolio
-                                    <div class="social" style="height: 30px; border-style: none;">
-                                        <a href="https://github.com/IPbiramontes/2020_Portfolio" target="_blank" style=" border-style: none;font-size: 25px;"><i class="icon-social-github" style="color: rgb(255,255,255);font-size: 25px;"></i></a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
             </div>
-
             <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-top: 8%;" class="container my-auto text-center">
                 <hr width="75%" color="#d8ff33" border-width="10px">
             </div>
