--- a/developer.html
+++ b/developer.html
@@ -24,7 +24,7 @@
             <div class="galleryHeader" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
                 <h3 style="display: inline-block; font-size: 3vw; color: #d8ff33; text-align: left;">2021</h3>
                 <h3 style="display: inline-block; font-size: 3vw; color: #d8ff33; text-align: right; padding-left:73%;">2020</h3>
-                <h3 style="font-size: 2vw; color: #d8ff33; text-align: left; text-indent: 5%;">Portfolios</h3>
+                <h3 style="font-size: 2vw; color: #d8ff33; text-align: left; text-indent: 5%;">Current Projects</h3>
             </div>
             <div class="row">
                 <div class="col-xs-4 col-md-4" style="padding-right: 2%;">
