--- a/designer.html
+++ b/designer.html
@@ -20,6 +20,30 @@
     <div style="background: #000000; padding-top: 5%;">
         <div class="container-fluid" style="padding-left: 5%; padding-right: 5%;">
             <!-- 2021  -->
+            <!-- 2021  -->
+            <div class="galleryHeader" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
+                <h3 style="font-size: 3vw; color: #d8ff33; text-align: left;">2021</h3>
+                <h3 style="font-size: 2vw; color: #d8ff33; text-align: left; text-indent: 5%;">Graphic Design</h3>
+            </div>
+            <div class="row">
+                <div class="col-xs-2 col-md-2" style="padding-right: 2%;"></div>
+                <div class="col-xs-8 col-md-8" style="padding-right: 2%;">
+                    <div class="container" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-bottom: 11%;">
+                        <div class="content">
+                            <div class="content-overlay"></div>
+                            <img class="content-image" src="img/des/moonlight.PNG" style="width:100%">
+                            <div class="content-details fadeIn-top">
+                                <div class="captions"> Moonlight Diner Logo </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-2 col-md-2" style="padding-right: 2%;"></div>
+            </div>
+
+            <div data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement" style="padding-top: 6%;" class="container my-auto text-center">
+                <hr width="75%" color="#d8ff33" border-width="10px">
+            </div>
             <!-- 2020  -->
             <div class="galleryHeader" data-aos="zoom-out-down" data-aos-duration="1000" data-aos-once="true" class="movement">
                 <h3 style="display: inline-block; font-size: 3vw; color: #d8ff33; text-align: left;">2020</h3>
